<resources>
    <string name="app_name">Share Taxi</string>
    <string name="MyRidesText">My rides</string>
    <string name="AcceptedRidesText">Accepted rides</string>
    <string name="fromHintText">From</string>
    <string name="toHintText">To</string>
    <string name="timeHintText">Time</string>
    <string name="passengersHintText">Passengers</string>
    <string name="btCreateText">Create</string>
    <string name="dateHintText">Date</string>
    <string name="searchButtonText">Search</string>
    <string name="tvMatchingRidesText">Matching Rides</string>
    <string name="saveText">Save</string>
    <string name="editRideText">Edit your ride</string>
    <string name="writeMessageHintText">Write a message…</string>
    <string name="searchRideText">Search for a ride</string>
    <string name="createRideText">Create a new ride</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="NoRidesText1">No rides yet?</string>
    <string name="NoRidesText2">Add&#x20;</string>
    <string name="NoRidesText3">&#x20;your own and share it with others!</string>
    <string name="NoneAcceptedText1">Looking for a ride?</string>
    <string name="NoneAcceptedText2">Search&#x20;</string>
    <string name="NoneAcceptedText3">&#x20;for a ride and get in touch!</string>
</resources>