<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlRidesC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ListBackColor"
    android:orientation="vertical">

    <TextView
        android:id="@+id/CreateNewRideText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="@dimen/myRidesTextPadding"
        android:text="@string/createRideText"
        android:textSize="@dimen/myRidesTextSize"
        />
    <RelativeLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/CreateNewRideText">

        <RelativeLayout
            android:id="@+id/fromLayout"
            android:background="@drawable/white_shape"
            android:layout_margin="5dp"
            android:padding="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etNewFrom"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_shape"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:maxLength="35"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:hint="@string/fromHintText"/>
            <Button
                android:id="@+id/btUseMyLocationFrom"
                android:layout_centerVertical="true"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_location_24dp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/toLayout"
            android:background="@drawable/white_shape"
            android:layout_margin="5dp"
            android:padding="0dp"
            android:layout_width="match_parent"
            android:layout_below="@id/fromLayout"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etNewTo"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="@drawable/white_shape"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:maxLength="35"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:hint="@string/toHintText"/>

            <Button
                android:id="@+id/btUseMyLocationTo"
                android:layout_centerVertical="true"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_location_24dp"
                />

        </RelativeLayout>

        <EditText
            android:id="@+id/etNewPassengers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toLayout"
            android:background="@drawable/white_shape"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="number"
            android:maxLength="1"
            android:hint="@string/passengersHintText"/>

        <EditText
            android:id="@+id/etNewDate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/etNewPassengers"
            android:layout_alignParentStart="true"
            android:background="@drawable/white_shape"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/dateHintText"
            android:focusable="false"
            tools:ignore="TextFields" />
        <EditText
            android:id="@+id/etNewTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_shape"
            android:layout_toEndOf="@id/etNewDate"
            android:layout_below="@id/etNewPassengers"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="time"
            android:maxLength="5"
            android:hint="@string/timeHintText"/>

        <Button
            android:id="@+id/btCreateNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etNewTime"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/btCreateText"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/tvCancel"
            android:visibility="gone"
            android:layout_below="@id/btCreateNew"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            android:text="@string/cancelButtonText"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>